feat: handle logging out in SecurityConfig